<resources>
    <string name="app_name">科学健身指导</string>
    <string name="zone">动态</string>
    <string name="communication">交流</string>
    <string name="function">功能</string>
    <string name="read">阅读</string>
    <string name="person">个人</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="portrait">头像</string>
    <string name="nick_name">昵称</string>
    <string name="name">用户名</string>
    <string name="phone">联系电话</string>
    <string name="pe_text_data">体质健康数据</string>
    <string name="label_register">注\t\t册</string>
    <string name="label_login">登\t\t录</string>
    <string name="label_username">用户名</string>
    <string name="label_password">密码</string>
    <string name="label_password_confirm">确认密码</string>
    <string name="label_sex">性别</string>
    <string name="label_birthday">出生日期</string>
    <string name="label_go_register">去注册</string>
    <string name="label_go_login">去登录</string>
    <string name="label_personal_info">个人信息</string>
    <string name="communicate">交流</string>
    <string name="join_communicate_group">加入交流群</string>
    <string name="have_joined_group">已加入的交流群</string>
    <string name="label_hi_username">Hi.%1$s</string>
    <string name="label_date">%1$s</string>
    <string name="label_scan">扫一扫</string>
    <string name="label_reserve">预约</string>
    <string name="label_advisory">咨询</string>
    <string name="label_evaluate">评估</string>
    <string name="label_train_advice">锻炼方案</string>
    <string name="label_food_advice">饮食建议</string>
    <string name="chat_send">说点什么吧。。。</string>
    <string name="group_material">群资料</string>
    <string name="label_set_chat_bg">设置群图片</string>
    <string name="chat_notes">群聊天记录</string>
    <string name="maessage_no_distributing">群消息免打扰</string>
    <string name="set_top_group">设为置顶群</string>
    <string name="add_group_member">添加群成员</string>
    <string name="group_member">群成员</string>
    <string name="group_member_name">%1$s</string>
    <string name="group_member_header">%1$s</string>
    <string name="default_member_list">默认排序</string>
    <string name="activity_member_list">活跃度排序</string>
    <string name="label_setting">设置</string>

    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm:ss </string>
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>
    <string name="log_out">退出登录</string>

    <string name="quit_group">退群</string>
    <string name="label_qr_add_group">扫一扫加群</string>
    <string name="group_member_size">%1$s人</string>
    <string name="label_more_group_members">...</string>
    <string name="label_divider">/</string>
    <string name="label_introduction">相关介绍:</string>
    <string name="label_confirm_reserve">确定预约</string>
    <string name="specialist_name">专家姓名:%1$s</string>
    <string name="specialist_skill">擅长邻域:%1$s</string>
    <string name="leave_msg_content">%1$s:%2$s</string>
    <string name="label_pe_data">体质健康测试成绩</string>
    <string name="label_pe_category">类别</string>
    <string name="label_pe_target">测试指标</string>
    <string name="label_pe_mark">数据</string>
    <string name="label_pe_score">得分</string>
    <string name="label_pe_shape">形态</string>
    <string name="label_pe_function">机能</string>
    <string name="label_pe_quality">素质</string>
    <string name="label_pe_data_total_score">总成绩:\t\t%s</string>
    <string name="label_check_evaluate">查看评估</string>
    <string name="label_empty">好像没有数据哦～</string>
    <string name="label_special_evaluate">专家意见:</string>
</resources>
