<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.zjnu.matcha.activities.PEDataActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarWithStatusBarSize"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/statusBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_pe_data"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_pe_category"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/label_pe_target" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/label_pe_mark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/label_pe_score" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_empty_stub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/status_empty"
                android:tint="#8d9ca9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_empty"
                android:textColor="#8d9ca9" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_pe_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        card_view:cardBackgroundColor="@color/white"
                        card_view:cardCornerRadius="6dp"
                        card_view:cardElevation="3dp"
                        card_view:cardPreventCornerOverlap="true"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            tools:layout_height="50dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/label_pe_shape"
                                android:textSize="20sp" />

                            <View
                                android:layout_width="0.3dp"
                                android:layout_height="match_parent"
                                android:background="#d8d8d8" />

                            <LinearLayout
                                android:id="@+id/pe_data_shape_container"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="7"
                                android:orientation="vertical" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        card_view:cardBackgroundColor="@color/white"
                        card_view:cardCornerRadius="6dp"
                        card_view:cardElevation="3dp"
                        card_view:cardPreventCornerOverlap="true"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            tools:layout_height="50dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/label_pe_function"
                                android:textSize="20sp" />

                            <View
                                android:layout_width="0.3dp"
                                android:layout_height="match_parent"
                                android:background="#d8d8d8" />

                            <LinearLayout
                                android:id="@+id/pe_data_function_container"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="7"
                                android:orientation="vertical" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        card_view:cardBackgroundColor="@color/white"
                        card_view:cardCornerRadius="6dp"
                        card_view:cardElevation="3dp"
                        card_view:cardPreventCornerOverlap="true"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            tools:layout_height="50dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/label_pe_quality"
                                android:textSize="20sp" />

                            <View
                                android:layout_width="0.3dp"
                                android:layout_height="match_parent"
                                android:background="#d8d8d8" />

                            <LinearLayout
                                android:id="@+id/pe_data_quality_container"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="7"
                                android:orientation="vertical" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center_horizontal"
                            android:text="@string/label_special_evaluate"
                            android:textSize="26sp" />

                        <TextView
                            android:id="@+id/txt_special_evaluate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            tools:text="你的身体素质非常棒，但还是需要锻炼" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/txt_pe_data_total_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="9dp"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:paddingTop="9dp"
                    android:text="@string/label_pe_data_total_score"
                    android:textSize="25sp" />

            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
