<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHighWhite"
    android:orientation="vertical"
    tools:context="cn.zjnu.matcha.activities.GroupSettingActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/statusBarSize" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="24dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:text="有氧健身" />

        <ImageView
            android:id="@+id/img_qrcode"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_qrcode" />

    </android.support.design.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/frame_group_member"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/group_member"
                android:textColor="@color/textSecond"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_group_members"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="36dp" />

        <TextView
            android:id="@+id/txt_more_group_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_more_group_members"
            android:textColor="#d8d8d8"
            android:textSize="36sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/group_member_count"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/group_member_size"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="top|end"
                android:background="@drawable/ic_chevron_right" />
        </LinearLayout>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_gravity="center"
        android:background="#d8d8d8"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/white">

        <com.allen.library.SuperTextView
            android:id="@+id/btn_set_group_portrait"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:sLeftTextColor="@color/black"
            app:sLeftTextSize="22sp"
            app:sLeftTextString="@string/chat_bg"
            app:sRightTextGravity="center"
            app:sRightTvDrawableRight="@drawable/ic_chevron_right"
            app:sRightViewMarginRight="20dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:gravity="center" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_quit_group"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/quit_group"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>
