<?xml version="1.0" encoding="utf-8"?>
<cn.zjnu.matcha.widget.view.MessageLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_specialist"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="3dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_portrait"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/bg_user_default_portrait"
                tools:ignore="RtlHardcoded" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/img_portrait"
                android:gravity="center_vertical"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/specialist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specialist_name"
                    android:textColor="@color/textPrimary"
                    android:textSize="15sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/specialist_skill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specialist_skill"
                    android:textColor="@color/textPrimary"
                    android:textSize="15sp" />
            </android.support.v7.widget.LinearLayoutCompat>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/textSecond" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="留言"
        android:textSize="20sp"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/textSecond" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_leave_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:elevation="2dp"
        android:orientation="horizontal"
        tools:targetApi="lollipop">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/chat_send"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:lineSpacingExtra="0dp"
            android:lineSpacingMultiplier="1"
            android:maxHeight="68dp"
            android:minHeight="44dp"
            android:padding="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecond"
            android:textCursorDrawable="@drawable/ic_cursor" />
    </android.support.v7.widget.LinearLayoutCompat>

    <net.qiujuer.widget.airpanel.AirPanelFrameLayout
        android:id="@id/airPanelSubLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</cn.zjnu.matcha.widget.view.MessageLayout>